--- a/src/Jluct/BlogBundle/Resources/views/base.html.twig
+++ b/src/Jluct/BlogBundle/Resources/views/base.html.twig
@@ -21,26 +21,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">JluctBlog</a>
+            <a class="navbar-brand" href="{{ path('jluct_blog_homepage') }}">JluctBlog</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
+            {#<ul class="nav navbar-nav">#}
+            {#<li><a href="#">Home</a></li>#}
 
-            </ul>
+            {#</ul>#}
             {#<ul class="nav navbar-nav navbar-right">#}
-                {#<li><a href="#">Sign In</a></li>#}
-                {#<li><a href="#">Sign Up</a></li>#}
+            {#<li><a href="#">Sign In</a></li>#}
+            {#<li><a href="#">Sign Up</a></li>#}
 
             {#</ul>#}
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-{% block body %}
-{% endblock %}
-
+<section class="container">
+    {% block body %}
+    {% endblock %}
+</section>
 {% block js %}
     <script src="{{ asset('bundles/jluctblog/vendor/jquery/jquery.min.js') }}"></script>
     <script src="{{ asset('bundles/jluctblog/vendor/bootstrap/js/bootstrap.min.js') }}"></script>
