--- a/src/Jluct/BlogBundle/Resources/views/base.html.twig
+++ b/src/Jluct/BlogBundle/Resources/views/base.html.twig
@@ -30,15 +30,19 @@
             {#<li><a href="#">Home</a></li>#}
 
             {#</ul>#}
-            {#<ul class="nav navbar-nav navbar-right">#}
-            {#<li><a href="#">Sign In</a></li>#}
-            {#<li><a href="#">Sign Up</a></li>#}
-
-            {#</ul>#}
+            <ul class="nav navbar-nav navbar-right">
+                {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <li><a href="#">Sign In</a></li>
+                    <li><a href="{{ path('jluct_blog_registration') }}">Sign Up</a></li>
+                {% else %}
+                    <li><a href="#">Logout</a></li>
+                {% endif %}
+            </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
 <section class="container">
+
     {% block body %}
     {% endblock %}
 </section>
