--- a/src/Jluct/BlogBundle/Resources/views/base.html.twig
+++ b/src/Jluct/BlogBundle/Resources/views/base.html.twig
@@ -42,7 +42,16 @@
     </div><!-- /.container-fluid -->
 </nav>
 <section class="container">
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                {{ message }}
+            </div>
 
+        {% endfor %}
+    {% endfor %}
     {% block body %}
     {% endblock %}
 </section>
