--- a/src/Jluct/BlogBundle/Resources/views/components/admin/post.html.twig
+++ b/src/Jluct/BlogBundle/Resources/views/components/admin/post.html.twig
@@ -1,11 +1,19 @@
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2">
         <img src="{{ post.image }}">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <h4><a href="{{ path('jluct_blog_post',{'id':post.id}) }}">{{ post.title }}</a></h4>
     </div>
-    <div class="col-md-1"><a role="button" class="btn btn-info btn-block" href="#">Update</a></div>
-    <div class="col-md-1"><a role="button" class="btn btn-success btn-block" href="#">Public</a></div>
-    <div class="col-md-1"><a role="button" class="btn btn-danger btn-block" href="#">Delete</a></div>
+    <div class="col-md-2"><a role="button" class="btn btn-info btn-block" href="#">Update</a></div>
+
+    <div class="col-md-2">
+        <a role="button"
+           class="btn btn-{% if post.public %}success{% else %}warning{% endif %} btn-block"
+           href="#">
+            {% if post.public %}Public{% else %}No public{% endif %}
+        </a>
+    </div>
+
+    <div class="col-md-2"><a role="button" class="btn btn-danger btn-block" href="#">Delete</a></div>
 </div>
