--- a/src/Jluct/BlogBundle/Resources/views/Admin/index.html.twig
+++ b/src/Jluct/BlogBundle/Resources/views/Admin/index.html.twig
@@ -4,7 +4,8 @@
 
     <div class="row">
         <div class="col-sm-12">
-            <a role="button" class="btn btn-success btn-block" href="#">CREATE</a>
+            <a role="button" class="btn btn-success btn-block"
+               href="{{ path('jluct_blog_admin_post_create') }}">CREATE</a>
         </div>
     </div>
 
