--- a/src/Jluct/BlogBundle/Resources/views/components/admin/post.html.twig
+++ b/src/Jluct/BlogBundle/Resources/views/components/admin/post.html.twig
@@ -16,5 +16,8 @@
         </a>
     </div>
 
-    <div class="col-md-2"><a role="button" class="btn btn-danger btn-block" href="#">Delete</a></div>
+    <div class="col-md-2">
+        <a role="button" class="btn btn-danger btn-block delete-button" data-post="{{ post.id }}" href="#"
+           data-toggle="modal" data-target=".del_modal">Delete</a>
+    </div>
 </div>
